--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "cloudinary": "^1.37.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "mongoose": "^7.2.1",
+    "mongoose": "^7.2.2",
     "multer": "^1.4.5-lts.1",
+    "nodejs": "^0.0.0",
     "nodemon": "^2.0.22",
     "validator": "^13.9.0"
   }
